k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"  
spec:
  ingressClassName: gce               
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: python-service
                port:
                  number: 80
